[Reading mode] Fix letter spacing on empty state page
Fixed: 473897330
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7403581
Commit-Queue: Lauren Winston <lwinston@google.com>
Cr-Commit-Position: refs/heads/main@{#1565354}

--- a/chrome/browser/resources/side_panel/read_anything/app/app.css
+++ b/chrome/browser/resources/side_panel/read_anything/app/app.css
@@ -135,6 +135,7 @@
   display: flex;
   margin: 0 auto 16px auto;
   font-family: var(--font-family);
+  letter-spacing: var(--letter-spacing);
   --sp-empty-state-heading-font-size: calc(var(--font-size) * 1.2);
   --sp-empty-state-body-font-size: var(--font-size);
 
